design: fix map box height and stretching bug

--- a/css/home.css
+++ b/css/home.css
@@ -455,6 +455,9 @@ body {
     border: 2px dashed #e0dcb8;
     background-color: #fafafa;
     transition: all 0.3s ease;
+    height: 550px; 
+    width: 100%;   
+    align-self: flex-start; 
 }
 
 [data-theme="dark"] .map-box {
